--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+   <nav class="project-nav">
+    <ul>
+      <li><a href="https://vadymhoncharov.github.io/Lr3_1/">№1</a></li>
+      <li><a href="https://vadymhoncharov.github.io/Lr3_2/">№2</a></li>
+      <li><a href="https://vadymhoncharov.github.io/Lr3_2.1/">№2.1</a></li>
+      <li><a href="https://vadymhoncharov.github.io/Lr3_3/">№3</a></li>
+      <li><a href="https://vadymhoncharov.github.io/Lr3_4/">№4</a></li>
+    </ul>
+  </nav>
+    <div class="content">
   <div class="container">
     <button id="filterBtn" onclick="applyFilters()">🎯 Застосувати</button>
 
@@ -25,7 +35,7 @@
 
     <div id="results" class="results"></div>
   </div>
-
+</div>
   <script src="script.js"></script>
 </body>
 </html>
